update:admin page, menu name

--- a/menu_project/menu/templates/menu/menu_list.html
+++ b/menu_project/menu/templates/menu/menu_list.html
@@ -123,7 +123,8 @@
 
     <!-- 사이드 메뉴 -->
     <div class="side-menu" id="sideMenu">
-        <div class="side-menu-header">
+        <div class="
+        side-menu-header">
             <h3>메뉴</h3>
             <button class="close-menu" id="closeMenu">×</button>
         </div>
