--- a/menu_project/menu/templates/menu/menu_list.html
+++ b/menu_project/menu/templates/menu/menu_list.html
@@ -208,7 +208,7 @@
     <div class="navigation-remote" id="navigationRemote">
         {% if prev_category %}
         <button class="remote-btn remote-btn-prev" id="remotePrev" title="이전 카테고리">
-            <span>◀</span>
+            <img src="{% static 'left.png' %}" alt="Previous" style="height: 30px;">
         </button>
         {% endif %}
         <button class="remote-btn remote-btn-top" id="remoteTop" title="맨 위로">
@@ -216,7 +216,7 @@
         </button>
         {% if next_category %}
         <button class="remote-btn remote-btn-next" id="remoteNext" title="다음 카테고리">
-            <span>▶</span>
+            <img src="{% static 'right.png' %}" alt="Next" style="height: 30px;">
         </button>
         {% endif %}
     </div>
