--- a/menu_project/menu/templates/menu/menu_list.html
+++ b/menu_project/menu/templates/menu/menu_list.html
@@ -122,45 +122,7 @@
     <button class="menu-toggle" id="menuToggle">☰</button>
 
     <!-- 사이드 메뉴 -->
-    <div class="side-menu" id="sideMenu">
-        <div class="
-        side-menu-header">
-            <h3>메뉴</h3>
-            <button class="close-menu" id="closeMenu">×</button>
-        </div>
-        <div class="side-menu-content">
-            <ul class="category-nav">
-                <li><a href="{% url 'menu:menu_main' %}">홈</a></li>
-                {% for cat in all_categories %}
-                    {% if not cat.parent and not cat.category_image %}
-                        <li class="top-category">
-                            <div class="category-header" {% if cat.sub_categories.exists %}onclick="toggleCategory({{ cat.id }})"{% endif %}>
-                                {% if cat.sub_categories.exists %}
-                                <span class="toggle-icon" id="icon-{{ cat.id }}">▶</span>
-                                {% endif %}
-                                <a href="{% url 'menu:menu_list' cat.id %}" {% if cat.id == category.id %}class="current"{% endif %}>
-                                    {% if cat.name_en %}<div class="category-name-en">{{ cat.name_en }}</div>{% endif %}
-                                    <div class="category-name-ko">{{ cat.name }}</div>
-                                </a>
-                            </div>
-                            {% if cat.sub_categories.exists %}
-                            <ul class="sub-categories" id="sub-{{ cat.id }}" style="display: none;">
-                                {% for sub_cat in cat.sub_categories.all %}
-                                    {% if not sub_cat.category_image %}
-                                        <li><a href="{% url 'menu:menu_list' sub_cat.id %}" {% if sub_cat.id == category.id %}class="current"{% endif %}>
-                                            {% if sub_cat.name_en %}<div class="category-name-en">{{ sub_cat.name_en }}</div>{% endif %}
-                                            <div class="category-name-ko">{{ sub_cat.name }}</div>
-                                        </a></li>
-                                    {% endif %}
-                                {% endfor %}
-                            </ul>
-                            {% endif %}
-                        </li>
-                    {% endif %}
-                {% endfor %}
-            </ul>
-        </div>
-    </div>
+    {% include "menu/_side_menu.html" %}
 
     <!-- 사이드 메뉴 오버레이 -->
     <div class="menu-overlay" id="menuOverlay"></div>
@@ -208,15 +170,15 @@
     <div class="navigation-remote" id="navigationRemote">
         {% if prev_category %}
         <button class="remote-btn remote-btn-prev" id="remotePrev" title="이전 카테고리">
-            <img src="{% static 'left.png' %}" alt="Previous" style="height: 30px;">
+            <img src="{% static 'left.png' %}" style="height: 30px;">
         </button>
         {% endif %}
         <button class="remote-btn remote-btn-top" id="remoteTop" title="맨 위로">
-            <span>↑</span>
+            <img src="{% static 'up.png' %}" style="height: 30px;">
         </button>
         {% if next_category %}
         <button class="remote-btn remote-btn-next" id="remoteNext" title="다음 카테고리">
-            <img src="{% static 'right.png' %}" alt="Next" style="height: 30px;">
+            <img src="{% static 'right.png' %}" style="height: 30px;">
         </button>
         {% endif %}
     </div>
